--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
     <section id="fade1">
     <div class="choices">
         <div class="choice " id="r">
-            <img src="images\rock1.png" alt="rock" height="80" width="80">
+            <img src="rock1.png" alt="rock" height="80" width="80">
         </div>
         <div class="choice " id="p">
-            <img src="images\paper1.png" alt="paper" height="80" width="80">
+            <img src="paper1.png" alt="paper" height="80" width="80">
         </div>
         <div class="choice " id="s">
-            <img src="images\scissors1.png" alt="rock" height="80" width="80">
+            <img src="scissors1.png" alt="rock" height="80" width="80">
         </div>
-        
     </div>
     <p id="action-msg">Make your move!</p>
     </section>
